# exercice

./: .gitignore  LLM_inf.py  LLM_inf2.py  LLM_inf3.py  LLM_inf_old.py  README.md  __init__.py  app.py  audio_link.txt  chunk.py  conf.py  credentials.yaml  download_model.py  exercise.py  get_chunk.py  main copy.py  main.py  nlp_fonctions.py  nlp_steps.py  pipeline.py  pyproject.toml  requirements.txt  steps.py  test_docker.py  test_dockerstep.py  test_inf.json  test_inf.py  test_llm_pipeline.py  test_llm_workflow.py  test_logs.py  test_logs2.py  test_transcribe.py  tokenize_1.py
config/: local.yaml
config/architectures/: macM1.yaml
config/credentials/: user1.yaml
config/llm_api/: linagora.yaml  llm_studio.yaml
containerised_steps/: entrypoint.sh
containerised_steps/transcribe/: dockerfile  transcribe.py
containerised_steps/transcribe_empty/: Dockerfile  transcribe.py  version.md5
nlp_tools/: build_image.py
results/06236509-7c70-4a10-b0b0-d4333cabd650/: log.txt
results/08d24b3e-7b71-447e-9b50-ce606fc2b298/: 1_0_transcribe__transcribe_empty.json  log.txt
results/195b4929-7e63-4c72-ae7c-89674452ab4c/: 2_0_parse_transcription__parse_whisperx_output.json  log.txt  (+1 more)
services/: CRA_prompt.txt  CRED_prompt.txt  CRI_prompt.txt  prompt_normalisation_v0.txt  senateurs_name_last.txt  system_prompt.txt  user_prompt.txt
test/: __init__.py  infer_llama3.py  test_conf.py  test_docker.py  test_inf.py  test_inf2.py  test_llm_pipeline.py  test_logs.py  test_parse_texte_inf.py  test_pipeline.py
tools/: build_image.py
workflows/: LLM_inf.py  nlp_steps.py  pipeline.py  run_docker_func.py  utils.py  workflowsLLM.py
(+20 files in other folders)
